1999-06-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (md_FIND_FFI): If external libffi or ffcall are not
	found, don't abort; instead, set FFILIB as avcall.lo
	and FFIINCLUDES, FFILDFLAGS to local avcall build directory.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Add BLT24 as a libname.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4: Add USEDLL automake conditional.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acargp.m4: Substitute ARGP_H to argp.h if it isn't found.

1999-06-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acargp.m4: Check for argp.h.

1999-06-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Quote JAVALIBS for Kaffe setting of KAFFELIBRARYPATH.

1999-06-02    <mgd@HELEN>

	* acjdk.m4: For Kaffe, get DOS-style path of ${jdkdir}/lib/kaffe,
	since that is needed to find the .la files.

1999-06-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Remove jdkdosdir; will use cygpath -w.

1999-05-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (USEDOSCLASSPATH): New substitution.  This distinguishes
	between native Windows and Cygwin applications.
	In Kaffe case, look in ${jdkdir}/bin/kaffe for KAFFE_CLASSDIR.
	Convert it to windows path if host_os is cygwin.

1999-05-31    <mgd@HELEN>

	* acjdk.m4 (JAVALIBS): Different settings for Solaris, Digital Unix,
	HPUX, and WebObjects.

1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (JAVALIBPATH_VAR): New variable.  Set to KAFFELIBRARYPATH
	in case of Kaffe, default to _JAVASWARM_LIBPATH in others.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4, Makefile.am (EXTRA_DIST): New macro.

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4: Check for .sl as well as .so.

1999-05-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acfind.m4: Check for .sl as well as .so.
